# macabake

./: README.md  main.py  pyproject.toml
src/: __init__.py  main.py
